<resources>
    <string name="app_name">Offers At Your Steps</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Logout</string>
    <string name="action_logout">Logout</string>


    <string name="menu_home">Home</string>
    <string name="menu_offer_near_me">Offers Near Me</string>
    <string name="menu_all_offers">All Offers</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_merchant_profile">Profile</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_theme">Theme</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="last_date">Last Date:</string>
    <string name="discount_percentage">10%</string>
    <string name="offer_price">Offer Price</string>
    <string name="actual_price">Actual Price</string>
    <string name="product_name">Product Name</string>
    <string name="offer_end_date">offer end date</string>


    <string-array name="CityList">
        <item>Chennai</item>
        <item>Coimbatore</item>
        <item>Madurai</item>
        <item>Tiruchirappalli</item>
        <item>Salem</item>
        <item>Ambattur</item>
        <item>Tirunelveli</item>
        <item>Tiruppur</item>
        <item>Avadi</item>
        <item>Tiruvottiyur</item>
        <item>Thoothukkudi</item>
        <item>Nagercoil</item>
        <item>Thanjavur</item>
        <item>Pallavaram</item>
        <item>Dindigul</item>
        <item>Vellore</item>
        <item>Tambaram</item>
        <item>Cuddalore</item>
        <item>Kancheepuram</item>
        <item>Alandur</item>
        <item>Erode</item>
        <item>Tiruvannamalai</item>
        <item>Kumbakonam</item>
        <item>Rajapalayam</item>
        <item>Kurichi</item>
        <item>Madavaram</item>
        <item>Pudukkottai</item>
        <item>Hosur</item>
        <item>Ambur</item>
        <item>Karaikkudi</item>
        <item>Neyveli</item>
        <item>Nagapattinam</item>
    </string-array>

    <string-array name="DistrictList">
        <item>Chennai</item>
        <item>Coimbatore</item>
        <item>Madurai</item>
        <item>Tiruchirappalli</item>
        <item>Salem</item>
        <item>Tirunelveli</item>
        <item>Tiruppur</item>
        <item>Thoothukkudi</item>
        <item>Kanniyakumari</item>
        <item>Thanjavur</item>
        <item>Dindigul</item>
        <item>Vellore</item>
        <item>Cuddalore</item>
        <item>Kancheepuram</item>
        <item>Erode</item>
        <item>Tiruvannamalai</item>
        <item>Virudhunagar</item>
        <item>Pudukkottai</item>
        <item>Krishnagiri</item>
        <item>Tirupattur</item>
        <item>Sivagangai</item>
        <item>Nagapattinam</item>
    </string-array>

    <string-array name="StateList">
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chhattisgarh</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Odisha</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttar Pradesh</item>
        <item>Uttarakhand</item>
        <item>West Bengal</item>
        <item>Andaman and Nicobar Islands</item>
        <item>Chandigarh</item>
        <item>Dadra and Nagar Haveli and Daman and Diu</item>
        <item>Jammu and Kashmir</item>
        <item>Ladakh</item>
        <item>Lakshadweep</item>
        <item>Delhi</item>
        <item>Puducherry</item>
    </string-array>
</resources>