<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <!--<item
            android:id="@+id/nav_home_page"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />-->
        <item
            android:id="@+id/nav_offer_near_me"
            android:icon="@drawable/baseline_near_me_24"
            android:title="@string/menu_offer_near_me" />
        <item
            android:id="@+id/nav_all_offers"
            android:icon="@drawable/baseline_local_offer_24"
            android:title="@string/menu_all_offers" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/baseline_person_24"
            android:title="@string/menu_profile"
            android:visible="false"/>

        <item
            android:id="@+id/nav_merchant_profile"
            android:icon="@drawable/baseline_person_24"
            android:title="@string/menu_merchant_profile"
            android:visible="false"/>
    </group>
</menu>